--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  @apply selection:bg-violet-600/60;
+}
+
+body {
+  @apply relative min-h-screen bg-black text-gray-100 antialiased;
+}
