--- a/src/styles/mdx.css
+++ b/src/styles/mdx.css
@@ -1,12 +1,15 @@
 [data-rehype-pretty-code-fragment] code {
-  @apply grid break-words rounded-none border-0 bg-transparent p-0 text-sm text-black;
-  counter-reset: line;
+  @apply grid break-words rounded-none border-0 bg-transparent p-0 text-base text-white;
+  /* counter-reset: line; */
   box-decoration-break: clone;
+}
+[data-rehype-pretty-code-fragment] [data-line] {
+  @apply border-l-2 border-transparent pl-4;
 }
 [data-rehype-pretty-code-fragment] .line {
   @apply w-fit px-1.5 py-1;
 }
-[data-rehype-pretty-code-fragment] [data-line-numbers] > .line::before {
+/* [data-rehype-pretty-code-fragment] code > [data-line]::before {
   counter-increment: line;
   content: counter(line);
   display: inline-block;
@@ -14,15 +17,18 @@
   margin-right: 1rem;
   text-align: right;
   color: gray;
-}
+} */
 [data-rehype-pretty-code-fragment] .line--highlighted {
-  @apply bg-zinc-300 bg-opacity-10;
+  @apply border-l-2 border-violet-600 bg-violet-300/10;
 }
-[data-rehype-pretty-code-fragment] .line-highlighted span {
+[data-rehype-pretty-code-fragment] [data-highlighted-chars] {
+  @apply rounded-md bg-violet-300/20 shadow-[0_0_0_4px_rgb(196_181_253_/0.2)];
+}
+[data-rehype-pretty-code-fragment] .line--highlighted span {
   @apply relative;
 }
 [data-rehype-pretty-code-fragment] .word--highlighted {
-  @apply rounded-md bg-zinc-300 bg-opacity-10 p-1;
+  @apply rounded-md bg-zinc-600 bg-opacity-10 p-1;
 }
 [data-rehype-pretty-code-title] {
   @apply mt-4 px-4 py-2 text-sm font-medium;
