fix: remove class that does not exist

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,7 +38,7 @@
     scroll-behavior: smooth;
   }
   body {
-    @apply relative text-md min-h-screen bg-background font-merriweatherSans text-foreground antialiased;
+    @apply relative min-h-screen bg-background font-merriweatherSans text-foreground antialiased;
   }
   .ripple {
     @apply pointer-events-none absolute animate-ripple rounded-full;
