feat: implement dark mode and refine styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,30 @@
 
 @layer base {
   :root {
+    --background: 210 20% 98%;
+    --foreground: 0 0% 10%;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 10%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 10%;
+    --primary: 262.1 83.3% 57.8%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 240 5% 40%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 240 5% 90%;
+    --muted-foreground: 240 5% 50%;
+    --accent: 240 5% 90%;
+    --accent-foreground: 0 0% 10%;
+    --destructive: 0 62.8% 50%;
+    --destructive-foreground: 0 0% 100%;
+    --border: 240 5% 80%;
+    --input: 240 5% 95%;
+    --ring: 262.1 83.3% 57.8%;
+
+  --radius: 0.5rem;
+  }
+
+  .dark {
     --background: 0 0% 0%;
     --foreground: 210 20% 98%;
     --card: 0, 0%, 0%;
@@ -23,20 +47,18 @@
     --border: 240 5% 26%;
     --input: 240 6% 10%;
     --ring: 262 83% 60%;
-    --radius: 0.5rem;
   }
 }
 
 @layer base {
   * {
-    @apply border-border selection:bg-secondary/20;
+    @apply border-border selection:bg-primary/20 dark:selection:bg-primary/50;
   }
   html {
-    color-scheme: dark;
     @apply scroll-smooth antialiased;
   }
   body {
-    @apply relative min-h-screen bg-background font-merriweatherSans text-foreground;
+    @apply relative min-h-screen bg-background transition-colors font-merriweatherSans text-foreground;
   }
   .ripple {
     @apply pointer-events-none absolute animate-ripple rounded-full;
